fix spacing on mygov

--- a/client/src/dashboard/styles/dashboard/_card.scss
+++ b/client/src/dashboard/styles/dashboard/_card.scss
@@ -26,6 +26,12 @@
     display: block;
   }
 
+  &#mygov {
+    .card__left {
+      min-height: 110px
+    }
+  }
+
   h3 {
     line-height: 1.2;
     margin: $gutter 0;
@@ -79,6 +85,7 @@
 .card__left {
   padding-left: 0;
   padding-right: 0;
+  // min-height: 105px;
 
   @media (min-width: $screen-sm) {
     width: 100%;
